spacing fixes

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -7,9 +7,9 @@ p {
 	display: grid;
 	grid-template-columns: 1fr 3fr 1fr;
 	padding-bottom: 20px;
-	align-self: start;
 	width: 100%;
 }
+
 
 .info-label {
 	padding: 10px;
@@ -18,14 +18,17 @@ p {
 .info-text {
 	border-bottom: 1px solid black;
 	margin-left: 10px;
-	padding-top: 10px;
-	padding-bottom: 20px;
+	padding: 10px;
 }
 
 .info-column-container {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	font-size: 16px;
+}
+
+.info-column {
+	/* align-self: start; */
 }
 
 .info-spacer {
@@ -53,6 +56,7 @@ p {
 	}
 	.info-column-container {
 		grid-template-columns: 1fr 1fr 1fr;
+		
 	}
 
 	.info-spacer {
